--- a/home.html
+++ b/home.html
@@ -10,7 +10,10 @@
   </head>
   
   <body>
-    <h1 id = "header"> Cindy's Website </h1>
+    <div class = "jumbotron text-center">
+      <h1 id = "header"> cindy li's portfolio </h1>
+      <p> welcome to my graphic design and illustration portfolio! </p>
+    </div>
     
     <div class = "navbar">
       <a href = "https://cindyxli.github.io/portfolio/home.html"> my works </a>
