Update and rename home.html to works.html

--- a/works.html
+++ b/works.html
@@ -16,7 +16,7 @@
     </div>
     
     <div class = "navbar">
-      <a href = "https://cindyxli.github.io/portfolio/home.html"> my works </a>
+      <a href = "https://cindyxli.github.io/portfolio/works.html"> my works </a>
       <a href = "https://cindyxli.github.io/portfolio/aboutme.html"> about me </a>
       <a href = "https://cindyxli.github.io/portfolio/contact.html"> contact me! </a>
     </div>
