--- a/works.html
+++ b/works.html
@@ -15,7 +15,7 @@
       <p> welcome to my graphic design and illustration portfolio! </p>
     </div>
     
-    <div class = "navbar">
+    <div class = "navdesu">
       <a href = "https://cindyxli.github.io/portfolio/works.html"> my works </a>
       <a href = "https://cindyxli.github.io/portfolio/aboutme.html"> about me </a>
       <a href = "https://cindyxli.github.io/portfolio/contact.html"> contact me! </a>
