--- a/works.html
+++ b/works.html
@@ -10,9 +10,16 @@
   </head>
   
   <body>
-    <div class = "jumbotron text-center">
-      <h1 id = "header"> cindy li's portfolio </h1>
-      <p> welcome to my graphic design and illustration portfolio! </p>
+    
+    <div class = "row">
+      <div class = "col-sm-4">
+        <div class = "jumbotron text-center">
+          <h1 id = "header"> cindy li's portfolio </h1>
+          <p> welcome to my graphic design and illustration portfolio! </p>
+        </div>
+      </div>
+      <div class = "col-sm-8">
+      </div>
     </div>
     
     <div class = "navdesu">
