--- a/works.html
+++ b/works.html
@@ -16,12 +16,19 @@
           <div class = "jumbotron text-center">
             <h1 id = "header"> cindy li's portfolio </h1>
             <p> welcome to my graphic design and illustration portfolio! </p>
+          
             
-            <div class = "navdesu">
-              <a href = "https://cindyxli.github.io/portfolio/works.html"> my works </a>
-              <a href = "https://cindyxli.github.io/portfolio/aboutme.html"> about me </a>
-              <a href = "https://cindyxli.github.io/portfolio/contact.html"> contact me! </a>
-            </div>
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link active" href="#"> works </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"> about me </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"> contact </a>
+              </li>
+            </ul>
           </div>
         </div>
         <div class = "col-sm-8">
