--- a/works.html
+++ b/works.html
@@ -13,11 +13,11 @@
     <div class = "container">
       <div class = "row">
         <div class = "col-sm-4">
-          <div class = "jumbotron text-center">
+          <div class = "jumbotron vertical-center">
             <h1 id = "header"> cindy li's portfolio </h1>
             <p> welcome to my graphic design and illustration portfolio! </p>
           
-            
+            <hr class="my-4">
             <ul class="nav flex-column">
               <li class="nav-item">
                 <a class="nav-link active" href="#"> works </a>
