--- a/works.html
+++ b/works.html
@@ -20,7 +20,7 @@
             <hr class="my-4">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link active" href="#"> works </a>
+                <a class="nav-link" href="#"> works </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"> about me </a>
