--- a/works.html
+++ b/works.html
@@ -34,6 +34,12 @@
           </div>
         </div>
         <div class = "col-sm-8">
+          <div class = "row align-items-center">
+            <h1> GRAPHIC DESIGN </h1>
+          </div>
+          <div class = "row align-items-center">
+            <h1> ILLUSTRATION </h1>
+          </div>
         </div>
       </div>
     </div>
