--- a/works.html
+++ b/works.html
@@ -33,7 +33,7 @@
             </ul>
           </div>
         </div>
-        <div class = "col-sm-8">
+        <div class = "col-lg-8">
           <div class = "row align-items-center">
             <h1> GRAPHIC DESIGN </h3>
           </div>
