--- a/works.html
+++ b/works.html
@@ -14,7 +14,7 @@
   <body>
     <div class = "container">
       <div class = "row">
-        <div class = "col-sm-4">
+        <div class = "col-4">
           <div class = "jumbotron vertical-center">
             <h1 id = "header"> cindy li's portfolio </h1>
             <p> welcome to my graphic design and illustration portfolio! </p>
@@ -33,7 +33,7 @@
             </ul>
           </div>
         </div>
-        <div class = "col-lg-8">
+        <div class = "col-8">
           <div class = "row align-items-center">
             <h1> GRAPHIC DESIGN </h3>
           </div>
