--- a/works.html
+++ b/works.html
@@ -34,10 +34,10 @@
           </div>
         </div>
         <div class = "col-8">
-          <div class = "row align-items-center">
+          <div id = "gdgroup" class = "row">
             <h1> GRAPHIC DESIGN </h3>
           </div>
-          <div class = "row align-items-center">
+          <div id = "illgroup" class = "row">
             <h1> ILLUSTRATION </h3>
           </div>
         </div>
