--- a/works.html
+++ b/works.html
@@ -35,10 +35,10 @@
         </div>
         <div class = "col-8">
           <div id = "gdgroup" class = "row">
-            <h1> GRAPHIC DESIGN </h3>
+            <h2 id="gd"> GRAPHIC DESIGN </h2>
           </div>
           <div id = "illgroup" class = "row">
-            <h1> ILLUSTRATION </h3>
+            <h2 id="ill"> ILLUSTRATION </h2>
           </div>
         </div>
       </div>
