--- a/works.html
+++ b/works.html
@@ -15,7 +15,7 @@
     <div class = "container">
       <div class = "row">
         <div class = "col-4">
-          <div class = "jumbotron vertical-center">
+          <div id = "mainjumbo" class = "jumbotron vertical-center">
             <h1 id = "header"> cindy li's portfolio </h1>
             <p> welcome to my graphic design and illustration portfolio! </p>
           
@@ -34,10 +34,10 @@
           </div>
         </div>
         <div class = "col-8">
-          <div id = "gdgroup" class = "row">
+          <div id = "gdgroup" class = "jumbotron text-center">
             <h2 id="gd"> GRAPHIC DESIGN </h2>
           </div>
-          <div id = "illgroup" class = "row">
+          <div id = "illgroup" class = "jumbotron text-center">
             <h2 id="ill"> ILLUSTRATION </h2>
           </div>
         </div>
