--- a/works.html
+++ b/works.html
@@ -35,10 +35,10 @@
         </div>
         <div class = "col-8">
           <div id = "gdgroup" class = "jumbotron text-center">
-            <h2 id="gd"> GRAPHIC DESIGN </h2>
+            <a href = "#"> GRAPHIC DESIGN </a>
           </div>
           <div id = "illgroup" class = "jumbotron text-center">
-            <h2 id="ill"> ILLUSTRATION </h2>
+            <a href = "#"> ILLUSTRATION </a>
           </div>
         </div>
       </div>
