--- a/works.html
+++ b/works.html
@@ -34,10 +34,10 @@
           </div>
         </div>
         <div class = "col-8">
-          <div id = "gdgroup" class = "jumbotron text-center">
+          <div id = "gdgroup" class = "jumbotron text-center labels">
             <a href = "#"> GRAPHIC DESIGN </a>
           </div>
-          <div id = "illgroup" class = "jumbotron text-center">
+          <div id = "illgroup" class = "jumbotron text-center labels">
             <a href = "#"> ILLUSTRATION </a>
           </div>
         </div>
