--- a/works.html
+++ b/works.html
@@ -35,10 +35,10 @@
         </div>
         <div class = "col-8">
           <div id = "gdgroup" class = "jumbotron text-center labels">
-            <a href = "#"> GRAPHIC DESIGN </a>
+            <a class = "label" href = "#"> GRAPHIC DESIGN </a>
           </div>
           <div id = "illgroup" class = "jumbotron text-center labels">
-            <a href = "#"> ILLUSTRATION </a>
+            <a class = "label" href = "#"> ILLUSTRATION </a>
           </div>
         </div>
       </div>
