--- a/works.html
+++ b/works.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="#"> works </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> about me </a>
+                <a class="nav-link" href="https://cindyxli.github.io/aboutme.html"> about me </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"> contact </a>
