--- a/aboutme.html
+++ b/aboutme.html
@@ -14,5 +14,8 @@
     <div class = "jumbotron text-center"> 
       <h1> about me </h1>
     </div>
+    <div class = "nav2">
+      
+    </div>
   </body>
 </html>
