--- a/works.html
+++ b/works.html
@@ -10,7 +10,11 @@
 
     <title> Cindy Li's Portfolio </title>
   </head>
-  
+  <style>
+  body {
+  background-color: #A6BEE7;
+  }
+  </style>
   <body>
     <div class = "container">
       <div class = "row">
